# GenerateDownloadURL

./: .env.example  .gitignore  DATABASE.md  DEPLOYMENT.md  README.md  deploy.sh  ssl-setup.sh
backend/: Cargo.toml
backend/migrations/: 20240101000000_create_download_links.sql  20240102000000_add_endpoint_column.sql
backend/src/: auth.rs  config.rs  database.rs  main.rs  oauth.rs  oss_client.rs  routes.rs  signing.rs  state.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  oauth.ts  types.ts  vite-env.d.ts
