[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
sha256 = "1.0"
base64 = { version = "0.21", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "set-header"] }
thiserror = "1"
percent-encoding = "2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
quick-xml = { version = "0.30", features = ["serialize"] }
hex = "0.4"
rand = "0.8"
url = "2.5"
